--- a/roles/3trains_wildfly/templates/wfly.service.j2
+++ b/roles/3trains_wildfly/templates/wfly.service.j2
@@ -6,8 +6,8 @@ Before=httpd.service
 [Service]
 Environment=LAUNCH_JBOSS_IN_BACKGROUND=1
 EnvironmentFile=-/etc/{{ wildfly.config_name_prefix }}{{ item }}.conf
-User=wildfly
-Group=wildfly
+User={{ wildfly.user }}
+Group={{ wildfly.group }}
 PIDFile={{ wildfly.basedir_prefix }}{{ item }}/{{ wildfly.config_name_prefix }}{{ item }}.pid
 ExecStart={{ wildfly.home }}/bin/standalone.sh -c $WILDFLY_SERVER_CONFIG -b $WILDFLY_BIND $WILDFLY_OPTS
 
