--- a/roles/3trains_keycloak/templates/keycloak.service.j2
+++ b/roles/3trains_keycloak/templates/keycloak.service.j2
@@ -8,7 +8,9 @@ EnvironmentFile=/etc/sysconfig/keycloak
 
 User={{ keycloak_service_user }}
 Group={{ keycloak_service_group }}
-ExecStart={{ keycloak_jboss_home }}/bin/standalone.sh -Djboss.bind.address=${KEYCLOAK_BIND_ADDRESS} -Djboss.http.port=${KEYCLOAK_HTTP_PORT} -Djboss.https.port=${KEYCLOAK_HTTPS_PORT} -Djboss.management.http.port=${KEYCLOAK_MANAGEMENT_HTTP_PORT} -Djboss.management.https.port=${KEYCLOAK_MANAGEMENT_HTTPS_PORT}
+PIDFile={{ keycloak_service_pidfile }}
+ExecStart={{ keycloak_dest }}/keycloak-service.sh start
+ExecStop={{ keycloak_dest }}//keycloak-service.sh stop
 TimeoutStartSec=600
 TimeoutStopSec=600
 
