--- a/roles/3trains_keycloak/templates/keycloak-sysconfig.j2
+++ b/roles/3trains_keycloak/templates/keycloak-sysconfig.j2
@@ -1,4 +1,4 @@
-JAVA_OPTS={{ keycloak_java_opts }}
+JAVA_OPTS='{{ keycloak_java_opts }}'
 JBOSS_HOME={{ keycloak_jboss_home }}
 KEYCLOAK_BIND_ADDRESS={{ keycloak_bind_address }}
 KEYCLOAK_HTTP_PORT={{ keycloak_http_port }}
