Keycloak: fix systemd envFile load

--- a/roles/3trains_keycloak/templates/keycloak.service.j2
+++ b/roles/3trains_keycloak/templates/keycloak.service.j2
@@ -4,13 +4,13 @@ After=network.target
 
 [Service]
 Type=idle
-EnvironmentFile=/etc/sysconfig/keycloak
+EnvironmentFile=-/etc/sysconfig/keycloak
 
 User={{ keycloak_service_user }}
 Group={{ keycloak_service_group }}
 PIDFile={{ keycloak_service_pidfile }}
 ExecStart={{ keycloak_dest }}/keycloak-service.sh start
-ExecStop={{ keycloak_dest }}//keycloak-service.sh stop
+ExecStop={{ keycloak_dest }}/keycloak-service.sh stop
 TimeoutStartSec=600
 TimeoutStopSec=600
 
