--- a/roles/3trains_keycloak/templates/keycloak.service.j2
+++ b/roles/3trains_keycloak/templates/keycloak.service.j2
@@ -3,7 +3,7 @@ Description=Keycloak Server
 After=network.target
 
 [Service]
-Type=idle
+Type=forking
 EnvironmentFile=-/etc/sysconfig/keycloak
 
 User={{ keycloak_service_user }}
@@ -11,8 +11,9 @@ Group={{ keycloak_service_group }}
 PIDFile={{ keycloak_service_pidfile }}
 ExecStart={{ keycloak_dest }}/keycloak-service.sh start
 ExecStop={{ keycloak_dest }}/keycloak-service.sh stop
-TimeoutStartSec=600
-TimeoutStopSec=600
+TimeoutStartSec=60
+TimeoutStopSec=60
+LimitNOFILE=102642
 
 [Install]
 WantedBy=multi-user.target
