--- a/roles/3trains_keycloak/templates/keycloak-service.sh.j2
+++ b/roles/3trains_keycloak/templates/keycloak-service.sh.j2
@@ -11,7 +11,7 @@ checkEnvVar() {
     exit "${exitCode}"
   fi
 }
-# SystemD will do for the unit, decomment 
+# SystemD will do for the unit, decomment
 #  for testing outside systemd
 . /etc/sysconfig/keycloak
 
@@ -33,7 +33,7 @@ fi
 checkEnvVar "${KEYCLOAK_PIDFILE}" 'KEYCLOAK_PIDFILE not provided' 2
 
 getKeycloakPID() {
-  
+
   local pid
   if [ -e "${KEYCLOAK_PIDFILE}" ]; then
     cat "${KEYCLOAK_PIDFILE}"
@@ -57,7 +57,7 @@ isKeyCloakRunning() {
     kill -0 "${pid}" 2> /dev/null
     if [ "${?}" -eq 0 ]; then
       statusKeycloak=1
-    fi      
+    fi
   fi
   set -e
   echo "${statusKeycloak}"
@@ -79,7 +79,8 @@ startKeycloak() {
 	-Djboss.http.port=${KEYCLOAK_HTTP_PORT} \
 	-Djboss.https.port=${KEYCLOAK_HTTPS_PORT} \
 	-Djboss.management.http.port=${KEYCLOAK_MANAGEMENT_HTTP_PORT} \
-	-Djboss.management.https.port=${KEYCLOAK_MANAGEMENT_HTTPS_PORT} 2>&1 >> "${KEYCLOAK_LOGFILE}" &
+	-Djboss.management.https.port=${KEYCLOAK_MANAGEMENT_HTTPS_PORT} \
+	-Djboss.node.name={{ inventory_hostname }} 2>&1 >> "${KEYCLOAK_LOGFILE}" &
     echo "${!}" > "${KEYCLOAK_PIDFILE}"
   fi
 }
@@ -103,12 +104,12 @@ deletePidFile() {
   rm -f "${KEYCLOAK_PIDFILE}"
 }
 
-case "$1" in 
-    start)  
+case "$1" in
+    start)
       startKeycloak
       ;;
-    stop)    
-      stopKeycloak 
+    stop)
+      stopKeycloak
       ;;
     restart)
       stopKeycloak
@@ -117,7 +118,7 @@ case "$1" in
     status)
       statusKeycloak
       ;;
-    *) 
+    *)
       echo "usage: $0 start|stop|restart" >&2
       exit 1
        ;;
