jdg: add keycloak caches

--- a/roles/3trains_jdg/templates/infinispan.xml.j2
+++ b/roles/3trains_jdg/templates/infinispan.xml.j2
@@ -5,15 +5,26 @@
         xmlns="urn:infinispan:config:12.1"
         xmlns:server="urn:infinispan:server:12.1">
 
-   <cache-container name="default" statistics="true">
+    <cache-container name="default" statistics="true">
       <transport cluster="${infinispan.cluster.name:cluster}" stack="${infinispan.cluster.stack:tcp}" node-name="${infinispan.node.name:}"/>
       <security>
-	<authorization>
+        <authorization>
           <role name="supervisor" permissions="READ WRITE EXEC CREATE"/>
-	</authorization>
+	      </authorization>
       </security>
-   </cache-container>
+    </cache-container>
 
+{% if jdg_keycloak_cache.enabled %}
+    <!-- keycloak caches -->
+    <cache-container name="keycloak">
+{% for keycloak_cache in jdg_keycloak_cache.caches %}
+      <replicated-cache name="{{ keycloak_cache }}" statistics="true" mode="SYNC" start="EAGER">
+        <transaction mode="NONE" locking="PESSIMISTIC"/>
+        <locking acquire-timeout="0" />
+      </replicated-cache>
+{% endfor %}
+    </cache-container>
+{% endif %}
    <server xmlns="urn:infinispan:server:12.1">
       <interfaces>
          <interface name="public">
@@ -53,7 +64,7 @@
       <endpoints socket-binding="default" security-realm="default">
         <rest-connector name="rest">
           <authentication mechanisms="DIGEST BASIC"/>
-	</rest-connector>
+        </rest-connector>
       </endpoints>
    </server>
 </infinispan>
