--- a/roles/3trains_jdg/templates/infinispan.service.j2
+++ b/roles/3trains_jdg/templates/infinispan.service.j2
@@ -2,18 +2,18 @@
 # Modify environment properties in this script as appropriate.
 # Copy this script to the following location: /etc/systemd/system
 # Activate with 'systemctl daemon-reload'
-#               'systemctl start|enable infinispan'
+#               'systemctl start|enable jdg'
 
 [Unit]
 Description=Infinispan Server Service
 After=network.target
 
 [Service]
-Environment="INFINISPAN_HOME={{ jdg.home }}"
-#Environment="JAVA_HOME=/usr/java/jdk-11.0.8"
-ExecStart=/bin/bash -c "${INFINISPAN_HOME}/bin/server.sh -c {{ jdg.config.name }} -b {{ jdg.bind_addr }}"
-Type=simple
-User={{ jdg.user.name }}
+Environment="ISPN_PIDFILE=/run/jdg.pid"
+ExecStart=/bin/sh -c '{{ jdg.home }}/bin/server.sh -c {{ jdg.config.name }} -b {{ jdg.bind_addr }} &'
+Type=forking
+TimeoutSec=30
+PIDFile=/run/jdg.pid
 
 [Install]
 WantedBy=multi-user.target
